--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,6 @@
         }
     ],
     "autoload": {
-        "psr-4": {"Statflo\\": "src/Statflo"}
+        "psr-4": {"Statflo\\DB\\": "src/Statflo/DB"}
     }
 }
